--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-       - uses: pnpm/action-setup@v3 # Uncomment this block if you're using pnpm
-         with:
-           version: 9 # Not needed if you've set "packageManager" in package.json
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
