--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "type": "module",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-mathjax3": "^4.3.2",
     "postcss": "^8.5.6",
     "tailwindcss": "3.4.17",
     "vitepress": "^1.5.0"
